[tool.poetry]
name = "amber"
version = "0.2.0"
description = "Search and download high resolution art from museums"
authors = ["GOATS2K <jp@glattetre.com>"]
readme = "README.rst"

[tool.poetry.scripts]
amber = "amber.commands:cmdgroup"

[tool.poetry.dependencies]
python = "^3.7"
aiofiles = "^0.5.0"
aiohttp = "^3.6.2"
click = "^7.1.2"
toml = "^0.10.0"
appdirs = "^1.4.4"
inquirer = "^2.6.3"
colorama = "^0.4.3"
termcolor = "^1.1.0"
cchardet = "^2.1.6"
aiodns = "^2.0.0"
pathvalidate = "^2.3.0"
halo = "^0.0.29"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
